Refactor component exports to use compound component pattern across multiple components
- Updated Breadcrumb component to use compound pattern for better organization and accessibility.
- Refactored Card component to support compound components for Content, Footer, and Header.
- Adjusted Carousel component to implement compound component structure.
- Modified Collapsible component to follow the new compound pattern.
- Refactored Command component to utilize compound component structure.
- Updated Dialog component to support compound components for better structure.
- Refactored Drawer component to implement compound component pattern.
- Adjusted DropdownMenu component to follow the new compound structure.
- Refactored Pagination component to utilize compound component pattern.
- Updated Popover component to support compound components.
- Refactored ScrollArea component to implement compound component structure.
- Adjusted Sheet component to follow the new compound pattern.
- Updated Tooltip component to utilize compound component structure.
- Enhanced package.json for @geee-be/react-utils with a detailed description and relevant keywords.

--- a/.copilot-instructions.md
+++ b/.copilot-instructions.md
@@ -78,7 +78,7 @@ This is a TypeScript monorepo containing React component libraries and utilities
 
 ### Component Composition
 ```typescript
-// Compound component pattern for complex UI elements
+// Compound component pattern for complex UI elements (recommended)
 <Card>
   <Card.Header>
     <Card.Title>User Profile</Card.Title>
@@ -90,6 +90,32 @@ This is a TypeScript monorepo containing React component libraries and utilities
   <Card.Footer>
     <Button>Save</Button>
   </Card.Footer>
+</Card>
+
+// Original form components for backward compatibility and flexibility
+import { Card, CardHeader, CardTitle, CardDescription, CardContent, CardFooter } from '@geee-be/react-twui';
+
+<Card>
+  <CardHeader>
+    <CardTitle>User Profile</CardTitle>
+    <CardDescription>Manage your account</CardDescription>
+  </CardHeader>
+  <CardContent>
+    <UserForm />
+  </CardContent>
+  <CardFooter>
+    <Button>Save</Button>
+  </CardFooter>
+</Card>
+
+// Mixed patterns are also supported
+<Card>
+  <Card.Header>
+    <CardTitle>Mixed Pattern</CardTitle>
+  </Card.Header>
+  <CardContent>
+    <Button>Save</Button>
+  </CardContent>
 </Card>
 ```
 
