--- a/packages/@geee-be/react-twui/.copilot-instructions.md
+++ b/packages/@geee-be/react-twui/.copilot-instructions.md
@@ -105,6 +105,43 @@ Components follow compound component patterns where applicable:
 </Card>
 ```
 
+### Compound Component Export Pattern
+For components with multiple related sub-components, use the compound component pattern to provide an intuitive API while maintaining backward compatibility:
+
+```typescript
+// index.ts - Dual export pattern (compound + original forms)
+export type { CardProps } from './Card.js';
+
+import { Card as CardComponent } from './Card.js';
+import { CardContent as CardContentComponent } from './CardContent';
+import { CardFooter as CardFooterComponent } from './CardFooter';
+import { CardHeader as CardHeaderComponent } from './CardHeader';
+
+type CardCompound = typeof CardComponent & {
+  Content: typeof CardContentComponent;
+  Footer: typeof CardFooterComponent;
+  Header: typeof CardHeaderComponent;
+};
+
+export const Card: CardCompound = Object.assign(CardComponent, {
+  Content: CardContentComponent,
+  Footer: CardFooterComponent,
+  Header: CardHeaderComponent,
+});
+
+// Export original form components for backward compatibility and flexibility
+export {
+  CardContentComponent as CardContent,
+  CardFooterComponent as CardFooter,
+  CardHeaderComponent as CardHeader,
+};
+```
+
+This dual export pattern provides:
+- **Compound usage**: `Card.Header`, `Card.Content`, `Card.Footer` (recommended for new code)
+- **Original form**: `CardHeader`, `CardContent`, `CardFooter` (backward compatibility and individual imports)
+- **Maximum flexibility**: Both usage patterns supported simultaneously
+
 ## Styling System
 - **CSS Custom Properties**: Defined in `css/` directory for theming
 - **Tailwind Utilities**: Primary styling approach
@@ -173,26 +210,13 @@ Components follow compound component patterns where applicable:
 ## Usage Examples
 ```typescript
 import { Button, Card, Input, Alert } from '@geee-be/react-twui';
+// or import individual components in original form
+import { Button, CardHeader, CardContent, CardFooter, Input, Alert } from '@geee-be/react-twui';
 
-// Basic usage with variants
+// Compound usage (recommended for new code)
 <Button variant="outline" size="lg">Click me</Button>
 
-// Form integration with error states
-<div className="space-y-2">
-  <Input
-    placeholder="Enter email"
-    type="email"
-    error={errors.email?.message}
-    className="w-full"
-  />
-  {errors.email && (
-    <Alert variant="destructive">
-      <Alert.Description>{errors.email.message}</Alert.Description>
-    </Alert>
-  )}
-</div>
-
-// Layout components with composition
+// Layout components with compound composition
 <Card className="w-96">
   <Card.Header>
     <Card.Title>User Profile</Card.Title>
@@ -202,6 +226,28 @@ import { Button, Card, Input, Alert } from '@geee-be/react-twui';
     <Input placeholder="Full name" />
     <Button className="w-full">Save Changes</Button>
   </Card.Content>
+</Card>
+
+// Alternative: Original form usage (backward compatibility)
+<Card className="w-96">
+  <CardHeader>
+    <CardTitle>User Profile</CardTitle>
+    <CardDescription>Manage your account settings</CardDescription>
+  </CardHeader>
+  <CardContent className="space-y-4">
+    <Input placeholder="Full name" />
+    <Button className="w-full">Save Changes</Button>
+  </CardContent>
+</Card>
+
+// Mixed usage patterns are also supported
+<Card className="w-96">
+  <Card.Header>
+    <CardTitle>Mixed Pattern</CardTitle>
+  </Card.Header>
+  <CardContent>
+    <Button>Save</Button>
+  </CardContent>
 </Card>
 
 // Complex component with variants and state
@@ -274,6 +320,23 @@ export default {
 - Follow Radix UI composition patterns
 - Use consistent naming conventions for props and variants
 - Support both controlled and uncontrolled patterns where applicable
+- **Compound Components**: Use the compound component pattern for components with multiple related sub-components (like Card, Dialog, Alert) to provide an intuitive API while maintaining individual component accessibility
+
+#### When to Use Compound Component Pattern
+Use the compound component pattern when:
+- A component has multiple related sub-components that are commonly used together
+- Sub-components have semantic relationships (e.g., Header, Content, Footer)
+- You want to provide both compound usage (`Component.SubComponent`) and individual access
+- The component follows a clear hierarchical structure
+- Examples: Card, Dialog, Breadcrumb, Alert with description/title, Sheet, Drawer
+
+#### Components Suitable for Conversion
+Consider converting these components to compound pattern:
+- `Dialog` → `Dialog.Trigger`, `Dialog.Content`, `Dialog.Header`, `Dialog.Footer`, etc.
+- `Breadcrumb` → `Breadcrumb.List`, `Breadcrumb.Item`, `Breadcrumb.Link`, etc.
+- `Alert` → `Alert.Title`, `Alert.Description` (if separate components exist)
+- `Sheet` → `Sheet.Trigger`, `Sheet.Content`, `Sheet.Header`, etc.
+- `Drawer` → `Drawer.Trigger`, `Drawer.Content`, `Drawer.Header`, etc.
 
 ### Styling Best Practices
 - Use CSS custom properties for themeable values
